tests/reference/asr-cptr_01-4e660f1.stderr
semantic error: Function 'empty_c_void_p' is not declared and not intrinsic
 --> tests/errors/cptr_01.py:4:15
  |
4 |     x: CPtr = empty_c_void_p()
  |               ^^^^^^^^^^^^^^^^ 
